# testing

./: .gitignore  CMakeLists.txt  FindGraphScope.cmake  README.md
.github/workflows/: ci.yml
.github/workflows/test/: conftest.py  test.py
src/: my_app.h  my_app_context.h
